# bepi-prediction-dashboard

./: .gitignore  .gitmodules  README.md  backend.py  dashboard.py  pyproject.toml
assets/: style.css
create_probability_maps/: create_messenger_regions.py  create_probability_maps.py  filter_region_observations.py
resources/: hollman_2025_crossing_list.csv  philpott_2020.xlsx
src/: backend.py  dashboard.py
src/create_probability_maps/: create_messenger_regions.py  create_probability_maps.py
src/create_probability_maps/output/: region_maps_from_direct_input_taa_90_270.nc  region_maps_from_direct_input_taa_n90_90.nc  region_maps_hollman.nc  region_maps_philpott.nc
