[project]
name = "bepi-prediction-dashboard"
version = "0.1.0"
description = "A dashboard to predict magnetospheric region for the BepiColombo mission based on MESSENGER ephemeris data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=3.2.0",
    "hermpy",
    "numpy>=2.3.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "planetary-coverage>=1.2.0",
    "plotly>=6.3.0",
    "xarray>=2025.9.1",
]

[tool.uv.sources]
hermpy = { git = "https://github.com/daraghhollman/hermpy" }
